Sección de ayuda completa

--- a/login.html
+++ b/login.html
@@ -34,6 +34,16 @@
             </ul>
         </nav>
     </section>
-    
+    <section class="contenido">
+        
+    </section>
+    <footer>
+        <div>
+            <a href="PCW"></a>
+            <p>2021</p>
+        </div>
+        <p>Pablo M&aacute;rtinez Navarro</p>
+        <p>Curso 2020-20201</p>
+    </footer>
 </body>
 </html>
