--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
     </section>
 
     <footer>
+        <a href="ayuda.html">Ayuda</a>
         <p>Pablo M&aacute;rtinez Navarro</p>
+        <p>Curso 2020-2021</p>
     </footer>
 </body>
 </html>
